	was set to 'None'.
2019-10-09 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 3.1.0int0
2019-10-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in the 'Select Cut' ['RDCutDialog'] that
	caused 'Group:' dropdown list to be empty.
2019-10-21 Fred Gleason <fredg@paravelsystems.com>
	* Fixed the font used for labels in the 'Edit RDLogEdit' dialog
	in rdadmin(1).
2019-10-21 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'RDLOGEDIT.WAVEFORM_CAPTION' field to the database.
	* Incremented the database version to 311.
	* Added a 'WaveForm Caption' control to the 'Edit RDLogEdit' dialog
	in rdadmin(1).
	* Implemented the 'WaveForm Caption' setting in the Voicetracker
	dialog in rdlogedit(1).
2019-10-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 3.1.0int1.
2019-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'RDStringToHex()' function to 'lib/rd.conf.cpp'.
	* Fixed bugs in 'RDWaveFile' that caused strings of null characters
	to be written into unfilled CartChunk string fields.
2019-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 3.1.0int2.
2019-10-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in 'rdxport.cgi' that caused a check of the
	Rivendell services to be triggered each time a WebAPI function was
	invoked.
2019-10-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in rdimport(1) that caused a segfault when
	invoked with the '--metadata-pattern' and '--log-syslog' switches.
2019-10-30 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in rdsoftkeys(1) that threw a segfault at
	startup.
2019-10-30 Fred Gleason <fredg@paravelsystems.com>
	* Added an rd.conf(5) man page.
2019-10-30 Fred Gleason <fredg@paravelsystems.com>
	* Added an rdsoftkeys(1) man page.
2019-10-31 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 3.2.0.